--- a/app/src/main/res/layout/row_layout_levels_created.xml
+++ b/app/src/main/res/layout/row_layout_levels_created.xml
@@ -23,6 +23,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@+id/image"
+        android:fontFamily="@font/font"
         android:singleLine="true"
         android:text="Level" />
 
