--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -13,7 +13,13 @@
             android:text="Name" />
 
 
-
+        <item
+            android:id="@+id/menu_main_search"
+            android:icon="@drawable/ic_search_list_levels"
+            android:orderInCategory="200"
+            app:showAsAction="always"
+            android:actionLayout="@+id/toolbar2"
+            android:title="Setting" />
         <item
             android:id="@+id/menu_main_clear"
             android:icon="@drawable/ic_delete_forever"
