--- a/app/src/main/res/layout/row_layout_levels_created.xml
+++ b/app/src/main/res/layout/row_layout_levels_created.xml
@@ -35,12 +35,12 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
-        android:layout_toStartOf="@+id/removeButton"
+        android:layout_toStartOf="@+id/playButton"
         android:clickable="true"
         android:src="@drawable/ic_baseline_edit_24" />
 
     <ImageButton
-        android:id="@+id/removeButton"
+        android:id="@+id/playButton"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_alignParentEnd="true"
