--- a/app/src/main/res/layout/row_layout_leves_to_play.xml
+++ b/app/src/main/res/layout/row_layout_leves_to_play.xml
@@ -37,13 +37,14 @@
         android:text="@string/author_level" />
 
     <ImageButton
-        android:id="@+id/removeButton"
+        android:id="@+id/playButton"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="0dp"
         android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/ic_play" />
 
 </RelativeLayout>
