--- a/app/src/main/res/layout/room_code_dialog.xml
+++ b/app/src/main/res/layout/room_code_dialog.xml
@@ -58,7 +58,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textCreateRoom" />
 
             <Button
-                android:id="@+id/buttonCreateRoom"
+                android:id="@+id/buttonSaveGuestScore"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -79,7 +79,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.544"
-                app:layout_constraintStart_toEndOf="@+id/buttonCreateRoom"
+                app:layout_constraintStart_toEndOf="@+id/buttonSaveGuestScore"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.905" />
         </androidx.constraintlayout.widget.ConstraintLayout>
